feat: Establish initial full-stack dashboard application including authentication, user management, and session tracking.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.562.0",
+    "nodemailer": "^7.0.13",
     "pg": "^8.17.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
