--- a/backend/package.json
+++ b/backend/package.json
@@ -7,16 +7,27 @@
     "start": "node scripts/sync-realtime.js",
     "dev": "nodemon scripts/sync-realtime.js",
     "sync": "node scripts/sync-realtime.js",
+    "server": "node src/server.js",
+    "server:dev": "nodemon src/server.js",
+    "init-users": "node scripts/init-user-tables.js",
     "test": "jest"
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.6",
     "dotenv": "^16.3.0",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.1",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.3",
     "node-cron": "^3.0.3",
+    "nodemailer": "^7.0.13",
     "pg": "^8.17.2",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
+    "uuid": "^13.0.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
