--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,41 @@
+# Logs
 ngo-logs-2026-02-05-12-00-28.txt
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables - NEVER COMMIT!
+.env
+.env.local
+.env.production
+.env.test
+frontend/.env
+backend/.env
+
+# Secrets and credentials - NEVER COMMIT!
+MASTER_ADMIN_CREDENTIALS.md
+*_CREDENTIALS.md
+secrets/
+*.key
+*.pem
+
+# Dependencies
+node_modules/
+dist/
+build/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Database
+*.sqlite
+*.db
